--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "pinia": "^2.3.0",
         "vue-toast-notification": "^3.1.3"
     }
 }
